Adding and building out json builders

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -9,47 +9,46 @@
 </head>
 <header>
   <div class="d-flex flex-wrap justify-content-around">
-    <h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-    <h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+    <a class="mx-5 py-2" href="../index.html">Home</a>
+    <a class="mx-5 py-2" href="categories.html">Games Exerciess and Formats</a>
   </div>
 </header>
 <body>
   <h1 class="text-center my-3">Categories</h1>
-  <h5 class="m-5 accent">Improvitorium is a destination for all things comedy improvisation! It contains a wealth resources designed to enhance your improv skills and ignite your comedic prowess. Explore a collection of rules, descriptions, and strategies for a myriad of games, exercises, and forms, curated to inspire and challenge both novice and seasoned performers alike. Delve into our educational improv hub, brimming with manuals, insightful infographics, and sage advice from industry veterans, providing invaluable guidance every step of the way. Whether you're seeking inspiration, instruction, or entertainment, Improvsitory offers a wealth of video examples, recommended reading, and links to similar websites, ensuring you're equipped with the tools you need to thrive in the world of comedy improvisation. Plus, discover how to locate theaters near you, where you can witness live performances and even take part in workshops to hone your craft. Get ready to unleash your creativity and join a vibrant community of improv enthusiasts at Improvsitory! </h5>
+  <p class="m-5 accent">Improvitorium is a destination for all things comedy improvisation! It contains a wealth resources designed to enhance your improv skills and ignite your comedic prowess. Explore a collection of rules, descriptions, and strategies for a myriad of games, exercises, and forms, curated to inspire and challenge both novice and seasoned performers alike. Delve into our educational improv hub, brimming with manuals, insightful infographics, and sage advice from industry veterans, providing invaluable guidance every step of the way. Whether you're seeking inspiration, instruction, or entertainment, Improvsitory offers a wealth of video examples, recommended reading, and links to similar websites, ensuring you're equipped with the tools you need to thrive in the world of comedy improvisation. Plus, discover how to locate theaters near you, where you can witness live performances and even take part in workshops to hone your craft. Get ready to unleash your creativity and join a vibrant community of improv enthusiasts at Improvsitory!</p>
   <div class="m-5">
-    <h3>Categories</h3>
-    <div class="four-column-list">
-      <h5><a href="all_games.html">All Games</a></h5>
-      <h5><a href="audience_participation.html">Audience Participation</a></h5>
-      <h5><a href="character.html">Character</a></h5>
-      <h5><a href="child_friendly.html">Child Friendly</a></h5>
-      <h5><a href="energy.html">Energy</a></h5>
-      <h5><a href="exercises.html">Exercises</a></h5>
-      <h5><a href="gibberish.html">Gibberish</a></h5>
-      <h5><a href="group.html">Group Games</a></h5>
-      <h5><a href="guessing.html">Guessing</a></h5>
-      <h5><a href="justification.html">Justification</a></h5>
-      <h5><a href="interview.html">Interview</a></h5>
-      <h5><a href="listening.html">Listening</a></h5>
-      <h5><a href="long_forms.html">Long Forms</a></h5>
-      <h5><a href="musical.html">Musical</a></h5>
-      <h5><a href="narrative.html">Narrative</a></h5>
-      <h5><a href="object_work.html">Object Work</a></h5>
-      <h5><a href="party.html">Party Games</a></h5>
-      <h5><a href="performance.html">Performance</a></h5>
-      <h5><a href="pun.html">Pun</a></h5>
-      <h5><a href="scene.html">Scenework</a></h5>
-      <h5><a href="sentence.html">Sentence</a></h5>
-      <h5><a href="song_formats.html">Song Formats</a></h5>
-      <h5><a href="torture.html">Torture</a></h5>
-      <h5><a href="warm_ups.html">Warm Ups</a></h5>
+    <h2>Categories</h2>
+    <div class="ten-column-list">
+      <a href="all_games.html">All Games</a>
+      <a href="audience_participation.html">Audience Participation</a>
+      <a href="character.html">Character</a>
+      <a href="child_friendly.html">Child Friendly</a>
+      <a href="energy.html">Energy</a>
+      <a href="exercises.html">Exercises</a>
+      <a href="gibberish.html">Gibberish</a>
+      <a href="group.html">Group Games</a>
+      <a href="guessing.html">Guessing</a>
+      <a href="justification.html">Justification</a>
+      <a href="interview.html">Interview</a>
+      <a href="listening.html">Listening</a>
+      <a href="long_forms.html">Long Forms</a>
+      <a href="musical.html">Musical</a>
+      <a href="narrative.html">Narrative</a>
+      <a href="object_work.html">Object Work</a>
+      <a href="party.html">Party Games</a>
+      <a href="performance.html">Performance</a>
+      <a href="pun.html">Pun</a>
+      <a href="scene.html">Scenework</a>
+      <a href="sentence.html">Sentence</a>
+      <a href="song_formats.html">Song Formats</a>
+      <a href="torture.html">Torture</a>
+      <a href="warm_ups.html">Warm Ups</a>
     </div>
-    <h5><a href=""></a></h5>
   </div>
   <footer>
     <div class="d-flex flex-wrap justify-content-around">
-      <h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-      <h5 class="mx-5 py-2"><a href="../pages/categories.html">Games Exerciese and Formats</a>
+      <a class="mx-5 py-2" href="../index.html">Home</a>
+      <a class="mx-5 py-2" href="../pages/categories.html">Games Exerciese and Formats</a>
     </div>
   </footer>
 </body>
