--- a/pages/child_friendly.html
+++ b/pages/child_friendly.html
@@ -9,92 +9,188 @@
 </head>
 <header id="top">
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </header>
 <body>
 	<h1 class="text-center my-3">Child Friendly</h1>
 	<p class="text-center my-3">These games and exercises are easy to learn and fun to play, great for groups of little ones!</p>
-		<div class="m-5 games-list">
-			<ul class="py-3">
-				<li>
-					<h5><a href="#alienTigerCow">Alien Tiger Cow</a></h5>
-				</li>
-				<li>
-					<h5><a href="#bunnyBunny">Bunny Bunny</a></h5>
-				</li>
-				<li>
-					<h5><a href="#change">Change AKA New Decision</a></h5>
-				</li>
-				<li>
-					<h5><a href="#characterPanel">Character Panel</a></h5>
-				</li>
-				<li>
-					<h5><a href="#taxi">Taxi</a></h5>
-				</li>
-			</ul>
-		</div>
+	<div class="m-5 games-list">
+		<ul class="py-3">
+			<li>
+				<a href="#alienTigerCow">Alien Tiger Cow</a>
+			</li>
+			<li>
+				<a href="#bunnyBunny">Bunny Bunny</a>
+			</li>
+			<li>
+				<a href="#change">Change</a>
+			</li>
+			<li>
+				<a href="#characterPanel">Character Panel</a>
+			</li>
+			<li>
+				<a href="#taxi">Taxi</a>
+			</li>
+		</ul>
+	</div>
 
 <hr class="thick-hr">
 
 <div class="m-5">
 	<!-- ---------- ALIEN TIGER COW ---------- -->
 	<div class="game-box p-2" id="alienTigerCow">
-		<h3>Alien Tiger Cow</h3>
+		<h2>Alien Tiger Cow</h2>
 		<hr>
-description		<h6>Tags</h6>
-		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - 
+		<h3>Instructions</h3>
+		<ul>
+			<li>The group forms a circle.</li>
+			<li>On the count of three all players strike a pose and make a noise as an alien, a tiger, or a cow.</li>
+		<ul>
+				<li>Alien: Hold your two index fingers up to your head like antennae and say "Bleep blorp!"</li>
+				<li>Tiger: Throw your hands out like your clawing and roar.</li>
+				<li>Cow: Hold your hands up to you stomach with your fingers sticking out like udders and say "Mooo!"</li>
+		</ul>
+			<li>Then repeat!</li>
+			<li>You can play with the intention of everyone trying to land on the same pose or eliminate the minority group each time until there is only one or two players left.</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>This is a fun easy way to warm up. Great for children or beginners.</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- BUNNY BUNNY ---------- -->
 	<div class="game-box p-2" id="bunnyBunny">
-		<h3>Bunny Bunny</h3>
+		<h2>Bunny Bunny</h2>
 		<hr>
-description		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
-	<!-- ---------- CHANGE AKA NEW DECISION ---------- -->
+	<!-- ---------- CHANGE ---------- -->
 	<div class="game-box p-2" id="change">
-		<h3>Change AKA New Decision</h3>
+		<h2>Change</h2>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Two players start a scene and a third acts as a host. The host will ring a bell or say a phrase like change! or new decision! periodically after a line of dialogue has been said. The player who said that last line of dialoque will have to say a new line of dialogue to replace it.</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Player 1: What do you want?</li><li>Player 2: I want a muffin.</li><li>Host: Change!</li><li>Player 2: I want a whole cake to myself</li><li>Host: Change!</li><li>Player 2: I want you to love me again!</li></ul></p><hr><p><strong>Tips:</strong><ul><li>Try to heighten each time you are made to change a line of dialogue and go for a drastic change on the third changed line.</li><br><li>As the host, utilize the rule of three most of the time, only occasionally making the players change only one line of dialogue or making them change many lines in a long run of changes.</li></ul><hr></p>		<h6>Tags</h6>
-		<a href="child_friendly.html">Child Friendly</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="Torture.html">Torture</a> - 
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a href="child_friendly.html">Child Friendly</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - <a href="torture.html">Torture</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- CHARACTER PANEL ---------- -->
 	<div class="game-box p-2" id="characterPanel">
-		<h3>Character Panel</h3>
+		<h2>Character Panel</h2>
 		<hr>
-<p><strong>Description:</strong><br><ul><li>Two players start a scene and a third acts as a host. The host will ring a bell or say a phrase like change! or new decision! periodically after a line of dialogue has been said. The player who said that last line of dialoque will have to say a new line of dialogue to replace it.</li></ul></p><hr><p><strong>Example:</strong><br><ul><li>Player 1: What do you want?</li><li>Player 2: I want a muffin.</li><li>Host: Change!</li><li>Player 2: I want a whole cake to myself</li><li>Host: Change!</li><li>Player 2: I want you to love me again!</li></ul></p><hr><p><strong>Tips:</strong><ul><li>Try to heighten each time you are made to change a line of dialogue and go for a drastic change on the third changed line.</li><br><li>As the host, utilize the rule of three most of the time, only occasionally making the players change only one line of dialogue or making them change many lines in a long run of changes.</li></ul><hr></p>		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="performance.html">Performance</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
 
 	<!-- ---------- TAXI ---------- -->
 	<div class="game-box p-2" id="taxi">
-		<h3>Taxi</h3>
+		<h2>Taxi</h2>
 		<hr>
-description		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="guessing.html">Guessing</a> - <a href="performance.html">Performance</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -103,8 +199,8 @@ description		<h6>Tags</h6>
 </body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </footer>
 </html>
