--- a/pages/group.html
+++ b/pages/group.html
@@ -9,47 +9,64 @@
 </head>
 <header id="top">
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </header>
 <body>
 	<h1 class="text-center my-3">Group Games</h1>
 	<p class="text-center my-3">Many games involve three or more players, but this section is dedicated to the type of group games that are played in between beats of a Harold.</p>
-		<div class="m-5 games-list">
-			<ul class="py-3">
-				<li>
-					<h5><a href="#adGame">Ad Game</a></h5>
-				</li>
-				<li>
-					<h5><a href="#bardsBallad">Bard's Ballad</a></h5>
-				</li>
-			</ul>
-		</div>
+	<div class="m-5 games-list">
+		<ul class="py-3">
+			<li>
+				<a href="#adGame">Ad Game</a>
+			</li>
+		</ul>
+	</div>
 
 <hr class="thick-hr">
 
 <div class="m-5">
 	<!-- ---------- AD GAME ---------- -->
 	<div class="game-box p-2" id="adGame">
-		<h3>Ad Game</h3>
+		<h2>Ad Game</h2>
 		<hr>
-description		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>An ensemble member comes up with an unusual product by taking an ordinary item and giving it an unusual trait</li>
+			<ul>
+				<li><em>A car that changes color based on it's surroundings.</em></li>
+				<li><em>A refrigerator that is also a radio.</em></li>
+			</ul>
+			<li>The ensemble works together to create an advertising campaign for an unusual product.</li>
+			<li>They will come up with a name, slogan, target demographic, celebrity spokesperson, jingle, etc...</li>
+			<li>All the elements of the product should complement each other.</li>
+			<li>No matter the idea, the entire group must support and yes and it.</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li><strong>Player 1: "We could call it The Chameleon!"</strong></li>
+			<li><strong>Player 2: "Yeah! We could have Meryl Streep as the spokesperson. She could talk about how she disappears into her roles like this car disappears into it's surroundings."</strong></li>
+			<li><strong>Player 3: "Yeah! She could start off the commercial as Julia Child and then finish as Margaret Thatcher."</strong></li>
+			<li><strong>Player 4: "We could sell it to criminals! If they're being chased by the police, they can blend into their surroundings to hide."</strong></li>
+			<li><strong>Player 3: "We could take helicopter footage of a police chase and suddenly, the car disappears, blending into the highway!"</strong></li>
+			<li><strong>Player 2: "When you don't want to be seen, this is your machine."</strong></li>
+			<li><strong>Player 4: "Great slogan! *Starts to sing* This car's named after a lizard that can hide, buy this car and camouflage your ride!"</strong></li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+		<p>Used as an exercise, the ensemble will...</p>
+			<li>Practice performing verbal all-at-once group games.</li>
+			<li>Strengthen their ability to listen, yes and, and utilize give and take.</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>The Upright Citizens Brigade Comedy Improv Manual (second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 302</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
-	</div>
-
-	<hr class="thick-hr">
-
-	<!-- ---------- BARD'S BALLAD ---------- -->
-	<div class="game-box p-2" id="bardsBallad">
-		<h3>Bard's Ballad</h3>
-		<hr>
-description		<h6>Tags</h6>
-		<a href="group.html">Group Game</a> - <a href="musical.html">Musical</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene</a> - 
-		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -58,8 +75,8 @@ description		<h6>Tags</h6>
 </body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exerciess and Formats</a>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </footer>
 </html>
