--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 </head>
 <header>
   <div class="d-flex flex-wrap justify-content-around">
-    <h5 class="mx-5 py-2"><a href="index.html">Home</a>
-    <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciess and Formats</a>
+    <a class="mx-5 py-2" href="index.html">Home</a>
+    <a class="mx-5 py-2" href="pages/categories.html">Games Exerciess and Formats</a>
   </div>
 </header>
 <body>
   <h1 class="text-center my-3">Improvitorium</h1>
-  <h5 class="m-5">Improvitorium is your ultimate destination for comedy improvisation. It offers extensive resources to enhance your improv skills and ignite your comedic talent. Explore rules, strategies, and descriptions for various games and exercises, curated for both beginners and seasoned performers. Access educational materials, insightful infographics, and expert advice from industry veterans. Improvitorium provides video examples, recommended readings, and links to related sites, along with information on local theaters for live performances and workshops. Join a vibrant community of improv enthusiasts and unleash your creativity at Improvitorium!</h5>
+  <p class="m-5">Improvitorium is your ultimate destination for comedy improvisation. It offers extensive resources to enhance your improv skills and ignite your comedic talent. Explore rules, strategies, and descriptions for various games and exercises, curated for both beginners and seasoned performers. Access educational materials, insightful infographics, and expert advice from industry veterans. Improvitorium provides video examples, recommended readings, and links to related sites, along with information on local theaters for live performances and workshops. Join a vibrant community of improv enthusiasts and unleash your creativity at Improvitorium!</p>
   <div class="m-5">
-    <h3>Explore</h3>
-    <h5><a href="pages/categories.html">Games, Exercises, and Formats</a></h5>
-    <h5><a href="">Books</a></h5>
-    <h5><a href="">Resources</a></h5>
-    <h5><a href="">Videos</a></h5>
+    <h2>Explore</h2>
+    <a href="pages/categories.html">Games, Exercises, and Formats</a><br>
+    <a href="">Books</a><br>
+    <a href="">Resources</a><br>
+    <a href="">Videos</a><br>
   </div>
   <footer>
     <div class="d-flex flex-wrap justify-content-around">
-      <h5 class="mx-5 py-2"><a href="index.html">Home</a>
-      <h5 class="mx-5 py-2"><a href="pages/categories.html">Games Exerciese and Formats</a>
+      <a class="mx-5 py-2" href="index.html">Home</a>
+      <a class="mx-5 py-2" href="pages/categories.html">Games Exerciese and Formats</a>
     </div>
   </footer>
 </body>
