--- a/pages/audience_participation.html
+++ b/pages/audience_participation.html
@@ -9,8 +9,8 @@
 </head>
 <header id="top">
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exercises and Formats</a></h5>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </header>
 <body>
@@ -19,7 +19,7 @@
 	<div class="m-5 games-list">
 		<ul class="py-3">
 			<li>
-				<h5><a href="#pillars">Pillars</a></h5>
+				<a href="#pillars">Pillars</a>
 			</li>
 		</ul>
 	</div>
@@ -29,12 +29,32 @@
 <div class="m-5">
 	<!-- ---------- PILLARS ---------- -->
 	<div class="game-box p-2" id="pillars">
-		<h3>Pillars</h3>
+		<h2>Pillars</h2>
 		<hr>
-description		<h6>Tags</h6>
+		<h3>Description</h3>
+		<ul>
+			<li>Description text</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Example text</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>Purpose text</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Tips text</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>Sources text</li>
+		</ul><hr>
+		<h4>Tags</h4>
 		<a href="audience_participation.html">Audience Participation</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scenework</a> - 
 		<hr>
-		<h6><a href="#top">Back to Top</a></h6>
+		<h5><a href="#top">Back to Top</a></h5>
 	</div>
 
 	<hr class="thick-hr">
@@ -43,8 +63,8 @@ description		<h6>Tags</h6>
 </body>
 <footer>
 	<div class="d-flex flex-wrap justify-content-around">
-		<h5 class="mx-5 py-2"><a href="../index.html">Home</a></h5>
-		<h5 class="mx-5 py-2"><a href="categories.html">Games Exercises and Formats</a></h5>
+		<a class="mx-5 py-2" href="../index.html">Home</a>
+		<a class="mx-5 py-2" href="categories.html">Games Exercises and Formats</a>
 	</div>
 </footer>
 </html>
